--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,33 @@
 numpy
 colorama
 matplotlib
+
+
+
+Based on the job description provided, here's a tailored cover letter for your application:
+
+---
+
+[Your Name] [Your Address] [City, State, Zip Code] [Your Email Address] [Your Phone Number] [Date]
+
+Hiring Manager YOPESO [Company Address] [City, State, Zip Code]
+
+Dear Hiring Manager,
+
+I am writing to express my interest in the Developer position at YOPESO, as advertised. With over [X years] of experience in software development and a passion for leveraging technology to solve real-world problems, I am excited about the opportunity to contribute to your dynamic and innovative team.
+
+The values and culture of YOPESO strongly resonate with me. I am particularly drawn to your commitment to collaboration, transparency, and professionalism. As someone who thrives in an agile and cross-functional environment, I am eager to collaborate with passionate professionals to create impactful solutions that make a difference for our customers.
+
+Throughout my career, I have had the opportunity to work with cutting-edge technologies and solve complex problems. My proficiency in Python, AWS, and SQL, combined with my experience in data engineering, positions me well to contribute effectively to your team. I am constantly seeking opportunities to learn and grow, and I am excited about the prospect of working with new technologies and moving between different tech stacks.
+
+I am impressed by YOPESO's dedication to employee development and well-being. The opportunities for professional certifications, knowledge sharing, and access to national or international conferences align closely with my own career aspirations. I am eager to leverage these resources to further enhance my skills and contribute to the success of your team.
+
+In addition to my technical skills, I bring strong problem-solving abilities, a proactive mindset, and a commitment to delivering high-quality solutions. I hold a [Your Degree] in [Your Field], which has equipped me with a solid foundation in computer science principles and best practices.
+
+Thank you for considering my application. I am enthusiastic about the opportunity to join YOPESO and contribute to your mission of creating innovative software products. I am available for an interview at your earliest convenience and look forward to discussing how my skills and experience align with the needs of your team.
+
+Warm regards,
+Riad Hajiyev
+
+
+Feel free to customize and adjust the cover letter to better fit your personal style and experiences. Good luck with your application!
